add many of files,Thanks George ombo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title></title>
-</head>
-<body>
- <h1>It's works!!</h1>
-</body>
-</html>
+---
+layout: default
+title: Shape Shed Code
+meta_keywords: html, css, javascript, expressionengine, code, php, ruby, shell scripts
+meta_description: George Ornbo's site for Github based code
+---
+<div id="intro">
+	<p>I'm Yuan He, <a href="http://lenage.com/">一个linux爱好者</a> living in London, UK. This is a little site created using <a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> to hold my experiments and freely available software.</p>
+</div>
