--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>404 - Fucksocks it has gone wonky</title>
+	<meta charset="utf-8" />
+	<title>404 - 你访问的页面未找到！</title>
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 	<script src="/js/jquery.timeago.js"></script>
@@ -13,10 +14,7 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/expressionengine/">ExpressionEngine</a></li>
-				<li><a href="/html-css/">HTML / CSS</a></li>
 
-				<li><a href="/javascript/">JavaScript</a></li>
 				<li><a href="/about/">About</a></li>
 			</ul>
 		</nav>
@@ -25,20 +23,24 @@
 
 
 	<div id="intro">
-		<p>Captain we are sinking! The page you were looking for wasn't found. It may have been moved or eaten. Sorry.</p>
+		<p>404.这是一个常见的错误，一般来说，他出现在你需要的页面没有找到的时
+		候.</p>
 
 	</div>
   
 
 <footer>
-	<div id="twitter">
+<!--	<div id="twitter">
 	</div>
 	<div id="lastfm">
 
 	</div>
 	<div id="flickr">
-	</div>
-	<p>This site was created by <a href="http://shapeshed.com/">George Ornbo</a> using <a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> and is hosted at <a href="http://pages.github.com/">Github Pages</a>. The source is available <a href="http://github.com/shapeshed/shapeshed.github.com/">here</a></p>
+	</div>-->
+	<p>This site was created by <a href="http://lenage.com/">lenage</a> using
+	<a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> and is hosted
+	at <a href="http://pages.github.com/">Github Pages</a>. The source is
+	available <a href="http://github.com/lenage/lenage.github.com/">here</a></p>
 
 </footer>
 </div>
