修改标题为中文

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 夜深的博客 
+title: lenage's blog 
 meta_keywords: html, css, javascript, code, php, ruby, shell scripts , python,
 archlinux
 meta_description: lenage's site for Github based code
