--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Shape Shed Code
+title: lenage's Blog
 meta_keywords: html, css, javascript, expressionengine, code, php, ruby, shell scripts
 meta_description: George Ornbo's site for Github based code
 ---
 <div id="intro">
-	<p>I'm Yuan He, <a href="http://lenage.com/">一个linux爱好者</a> living in London, UK. This is a little site created using <a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> to hold my experiments and freely available software.</p>
+	<p>I'm George Ornbo, <a href="http://shapeshed.com/">a web designer and developer</a> living in London, UK. This is a little site created using <a href="http://wiki.github.com/mojombo/jekyll">Jekyll</a> to hold my experiments and freely available software.</p>
 </div>
