--- a/404-not-found.html
+++ b/404-not-found.html
@@ -4,4 +4,14 @@ title: 404 &ndash; Not found
 ---
 
 <h2>404 &ndash; 未找到页面</h2>
-<p>你要的东西不在这里，到别处去看看吧</p>
+<p>你要找东西不在这里，不妨搜一下本站!</p>
+<div>
+  <form action="http://www.google.com/cse" method="get">
+    <fieldset>
+      <input type="hidden" name="cx" value="014712474749397443257:u5axdnovsmk" />
+      <input type="hidden" name="ie" value="UTF-8" />
+      <input type="search" name="q" size="31" />
+      <input type="submit" name="sa" value="搜索" />
+    </fieldset>
+  </form>
+</div>
