--- a/config.html
+++ b/config.html
@@ -13,5 +13,9 @@ title: My config files
   <a href="http://github.com/lenage/dotfiles">dotfiles</a> 
   <span>系统配置文件</span>
 </h3>
-<p>系统配置文件，包含openbox，tint2，gtl,.Xresoure,mplayer,bash,fonts,pacman,xorg,rc.conf等所有的配置文件，作为系统配置文件的备份。</p>
+<p>系统配置文件，包含openbox，tint2，gtk,.Xresoure,mplayer,bash,fonts,pacman,xorg,rc.conf等所有的配置文件，作为系统配置文件的备份。</p>
+<h3>
+  <a href="http://github.com/lenage/oh-my-zsh">oh-my-zsh</a> 
+  <span>zsh配置文件</span>
+</h3>
 {% include footer.html %}
