--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About
 <h2>About</h2>
 
 <p><a href="http://lenage.com"><img id="left" src="{{ base.url }}/images/qrcode.png" alt="lenage" width="200"/></a> Aloha! 我叫何源，甘肃人，前端攻城师，linux爱好者，目前在长沙，正在寻找一份合适的工作，如果你觉得我靠谱，你可以
-   到<a href="http://cn.linkedin.com/in/heyuan">linkedin</a>查看我的简历。
+   到<a href="http://blog.lenage.com/images/heyuan_resume.pdf">这里下载</a>我的简历。
     到<a href="http://book.douban.com/people/lendage">豆瓣读书</a>查看我最近读的书；
     到<a href="http://github.com/lenage">github</a>上查看我最近的活动；
     在<a href="http://twitter.com/heyuan">twitter</a>或<a href="http://weibo.com/lendage">新浪微博</a>上关注我或在Gtalk（lendage[AT]gmail.com)找我聊天，我的联系方式在左边的二维码中。
