--- a/config.html
+++ b/config.html
@@ -18,4 +18,8 @@ title: linux config files --lenage.blog
   <a href="http://github.com/lenage/oh-my-zsh">oh-my-zsh</a> 
   <span>zsh配置文件</span>
 </h3>
+<h3>
+  <a href="http://github.com/lenage/lenage.github.com">blog.lenage.com</a> 
+  <span>本博客源代码</span>
+</h3>
 {% include footer.html %}
