change about page informaation

--- a/about.html
+++ b/about.html
@@ -7,11 +7,12 @@ title: About
 </style>
 <h2>About</h2>
 
-<p><a href="http://lenage.com"><img id="left" src="{{ base.url }}/images/qrcode.png" alt="lenage" width="200"/></a> Aloha! 我叫何源，甘肃人，前端攻城师，有一些linux经验，暂住长沙，正在寻找一份合适的工作，如果你觉得我靠谱，你可以
-   到<a href="http://blog.lenage.com/images/heyuan_resume.pdf">这里下载</a>我的简历。
-    到<a href="http://book.douban.com/people/lendage">豆瓣读书</a>查看我最近读的书；
+<p><a href="http://lenage.com"><img id="left" src="{{ base.url }}/images/qrcode.png" alt="lenage" width="200"/></a>
+  Aloha! 这里是个人信息之类的,前端攻城师一枚，有一些linux经验(就是自己折腾)，现居杭州，欢迎到
+    <a href="http://book.douban.com/people/lendage">豆瓣读书</a>查看我最近读的书；
     到<a href="http://github.com/lenage">github</a>上查看我最近的活动；
-    在<a href="http://twitter.com/heyuan">twitter</a>或<a href="http://weibo.com/lendage">新浪微博</a>上关注我或在Gtalk（lendage[AT]gmail.com)找我聊天，我的联系方式在左边的二维码中。
+    在<a href="http://twitter.com/heyuan">twitter</a>或
+    <a href="http://weibo.com/lendage">新浪微博</a>或Gtalk（lendage[AT]gmail.com)
 </p>
 <!--
 <h2 style="display:block;clear:both">我的互联网经历</h2>
