[style] add post.date in the bottom of post

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ title:  夜深
   <div class="content">
     {{ post.content }}
   </div>
-  <div class="bottom"></div>
+  <div class="bottom">
+    <span>{{post.date | date: "%c"}}</span>
+  </div>
 </div>
 {% endfor %}
 <!--<h2>Archive</h2>-->
