change the data format

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title:  夜深
     {{ post.content }}
   </div>
   <div class="bottom">
-    <span>{{post.date | date: "%c"}}</span>
+    <span>{{post.date | date: "%A %D"}}</span>
   </div>
 </div>
 {% endfor %}
