Update project info and write new post of mac chinese font

--- a/projects.html
+++ b/projects.html
@@ -1,17 +1,28 @@
 ---
 layout: default
-title: My config files 
+title: My config files
 ---
 
 <h2>配置文件</h2>
 <h3>
-  <a href="http://github.com/lenage/vimfiles">vimfiles</a> 
+  <a href="http://github.com/lenage/vimfiles">vimfiles</a>
   <span>我的vim配置文件</span>
 </h3>
 <p>从<a href="https://github.com/scrooloose/vimfiles">scrooloose</a>处fork过来，去掉了状态栏提示的特性，加入了supertab和zencoding-vim插件，gundo需要python支持，archlinux需要自己从abs里面自己编译安装。</p>
 <h3>
-  <a href="http://github.com/lenage/dotfiles">dotfiles</a> 
+  <a href="http://github.com/lenage/dotfiles">dotfiles</a>
   <span>系统配置文件</span>
 </h3>
 <p>系统配置文件，包含openbox，tint2，gtl,.Xresoure,mplayer,bash,fonts,pacman,xorg,rc.conf等所有的配置文件，作为系统配置文件的备份。</p>
+<h3>
+  <a href="http://github.com/lenage/resume">Resume</a>
+  <span>moderncv 中文模版/span>
+</h3>
+<p>moderncv 中文简历模版</p>
+
+<h3>
+  <a href="http://github.com/lenage/emacs-config">Emacs-config</a>
+  <span>Emacs配置文件/span>
+</h3>
+<p>从各处整理出来的emacs配置，基本上还算全面，不怎么使用但能用，比emacs-start-kit靠谱</p>
 {% include footer.html %}
