--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,17 @@
 ---
 layout: default
-title: My config files
+title: My Projects
 ---
 <div class="post projects">
   <div class="top">
     <h2>My Github Projects</h2>
   </div>
   <div class="content">
+    <h3>
+      <a href="http://github.com/lenage/emacs-config">Emacs-config</a>
+      <span>Emacs配置文件</span>
+    </h3>
+    <p>从各处整理出来的emacs配置，基本上还算全面，目前主要用此配置文件工作，升级到24之后用packages管理mode了，个人感觉比emacs-start-kit靠谱</p>
     <h3>
       <a href="http://github.com/lenage/vimfiles">vimfiles</a>
       <span>我的vim配置文件</span>
@@ -19,15 +24,9 @@ title: My config files
     <p>系统配置文件，包含openbox，tint2，gtl,.Xresoure,mplayer,bash,fonts,pacman,xorg,rc.conf等所有的配置文件，作为系统配置文件的备份。</p>
     <h3>
       <a href="http://github.com/lenage/resume">Resume</a>
-      <span>moderncv 中文模版</span>
+      <span>moderncv 中文模版(个人信息比较多，已经从github上删除了，如有需要请联系)</span>
     </h3>
       <p>moderncv 中文简历模版</p>
-
-      <h3>
-        <a href="http://github.com/lenage/emacs-config">Emacs-config</a>
-        <span>Emacs配置文件</span>
-      </h3>
-        <p>从各处整理出来的emacs配置，基本上还算全面，不怎么使用但能用，比emacs-start-kit靠谱</p>
       </div>
       <div class="bottom"></div>
     </div>
