Don't use Jquery

--- a/hacked.html
+++ b/hacked.html
@@ -1,3 +1,3 @@
 <script>
-  var str = "</script><script>alert('hacked');$('body').css({'-webkit-transform': 'rotate(363deg) translate(-300px, 10px)'}); return false;</script>";
+  var str = "</script><script>alert('hacked');document.body.style.webkitTransform = 'rotate(363deg) translate(0px, 20px)'; return false;</script>";
 </script>
