--- a/hacked.html
+++ b/hacked.html
@@ -1,3 +1,3 @@
 <script>
-  var str = "</script><script>alert('hacked');document.body.style.webkitTransform = 'rotate(363deg) translate(0px, 20px)';</script>";
+  var str = "</script><script>return false; document.body.style.webkitTransform = 'rotate(363deg) translate(0px, 20px)';</script>";
 </script>
