Add new layout for tutorial

--- a/404.html
+++ b/404.html
@@ -1,18 +1,70 @@
----
-layout: default
-title: 404 &ndash; Not found
----
-<h2>404 &ndash; 未找到页面</h2>
-
-<p>你要找东西不在这里，不妨搜一下本站!</p>
-<div>
-  <form action="http://www.google.com/cse" method="get">
-    <fieldset>
-      <input type="hidden" name="cx" value="014712474749397443257:u5axdnovsmk" />
-      <input type="hidden" name="ie" value="UTF-8" />
-      <input type="search" name="q" size="31" />
-      <input type="submit" name="sa" value="搜索" />
-    </fieldset>
-  </form>
-</div>
-</div>
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>404-PAGE NOT FOUND</title>
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="/assets/images/favicon.png">
+  <link rel="stylesheet" href="/assets/css/all.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
+</head>
+<body>
+  <div class="container">
+    <pre style="font: 4px/2px monospace;">`..```.,,```````...........',......:,...```..,...,,:::;;;;;;;;;;;;;;;::::::
+`.,.`..:;:,.````..........,',......:,...```..,.,,::;;;;;;;;;;;;;;;;::::,,,,
+```..,,;';;,,,,.,........,,+,,.....;,...````.,,,,::::;;;;;;;;;;;:::,,,,,,,,
+````,::'''':,,,,::,,.....,,+,,.....;,...````...,::::::;:;;;;::::,,,,,,,,,,.
+,..`..::;;';:;:,,:;';,..,,,+,,,,..,::,,::`...`.,:::::::::;:::,,,...........
+;,,...,,;;'';,;;:;''';:,,,,+:,,,,,,;;'''+`.`...::::::::::,,,.............``
+,.,;,...:;'';;;;';'',,,,,,,':,,,,,,,,,,,,..```.:::::::,,..............``...
+`.,,::,,:;''';''+'';,.,::::::,,,,,,,,,....````.:::::,.```.``.........``````
+....,..,,;;++'';+'';,,,,,,:;;;,,,,,:,,,,,..````,:,.```````.`.......````````
+..`..,.,::;''+'++++'::,,,:::.,,.,,,:,,,,,,,````,.`````````.```....`````````
+.``......,;'++++'+#+'::::;:;::::,,,:,,,.,,,,```````````````.`.`````````````
+.`.,..,,..;;'++++#####'';'+''';;;:,,,,...,,,``..````````````.``````````````
+..,:.,:,.,,:''+#+######'''@#+#+;:.,,..,..,,,,....`````````````````````````
+,,...,:,,,:;'++#++##@###++#++;:'':.,``.,.,:::.`...`````````````````````````
+,`.``..,,..,:;;'###@####++'+#','##';:.````........```````````````````` `  `
+````..,....,,,;'''##+'++##+++,;+###+:;:``.,.,:`....``````````````````     `
+```..,..``,:,..,:'++';'###++'.'+':;::,,.``,,,,````.`````````````  `      `
+``.::,.``.,:,..:;'++;;'++++'+:':;;+';;..``;,::`.```````````````
+..,,...``.,,,,.,:''+;'+++'''';''++#+'+..``.,,;`.....````````            ```
+,.,.,..`,,:,,:,::;;;;'+++';'':;;###@#;,.```..:..,.`.```````            ````
+:,.,...:,:,,,,,::;';''+'';;;:::'#+#+',,....:.::,:, ..``````            ``
+':,..,:.,::,,,.,:;+;''+';;;;::,;+++',,,,,,,::';,..`..``````          ````
+';:.....,;,,,...,;:';;'';;::,.......,::::,,''';:,``,,``````         `````
+'';,...,:,,:....,.:'';'';;;:.,`  ``.:,,::;;++'';:``.,,``````      ```````
+++':...,,,,....,.,,';''+'':.,`   `.,',,,'''+';';;`....``` ``    ``..```
+#+':...,,........,:;:'+#+':.``  ``,:;,,,:'++';;';..,...`  ``   `..,`````
++#+':.,,..,....,,::::''#'+.,`````.:';,,:+++;+;';:`.,,..`  ``` `..;````
+'###;,,..,....,.,,,:;;++'+,,,```.:;,,+'#++'':;'',`.....`` ````.,'``` ` `
+''##':,.,....,.,,,.,:;;+'':',..,:,,,.+''++::::;+,....`.``````.,+.``  `    `
+'+##+':,,,,,,.,,..,:,'#'+;;;,.:::,,:;#++#'+;''+':.,....`` ``.:+,```     ```
+'+#@#':,,,,,.,,..,.:++;++;''::,:;;'''###+''''+'':.,...``````,+:`````     ``
+'+###+;:,,,,,,,,...,;:#++;+':::;;++++##+''''++';;,......```.:,```` ``    ``
+'+###+';::::::,.,...:;';''+';;;;'++++#+';;+++';::,......``.,: ````  `   ```
+'+###+';:::::,,,...,:;'++++'';::;;'''+;;;''+'';::,,,,...```:.````` `    ```
+'+###+';;;::,,,,,,....;+###+':....,:,;;';'+'';,,,,,.....```,````   `    ```
+++####+;:::,,:,,,.....,;+#+':.....,...`..,;:;:,,,..,....```..```` ``    `
+++#+++';:::::::,,,,..,..:'+'::,:;;::::'+##'',:,..,,,,...```..``````
++#@#+'';:::;;::,,........:';';;:;'';;######+':,,,,.,,,,.`.,,..````
+###+''';;;:::::,,,,...,,:;;''++'++#'+######+++';,,`..,``.,:;,..```
+###+''';;:::::::::,,,::::'+'+#''###'###';#;.;###;...`.``.,:;,....``
+##+'''';:::;;;;:::::,:::;;;'';;'+##+#'#;:++##+#++,.`````.,;+,....```      `
+#+''''';:::::::::::;;;;;:;''::;'+###;+@.::###+#@';`````.,;'+,.,...``      `
+#+''''';::::::;;;:;''';;,...,;++++++#'#:;'++';':.` ```.,;+++,,,,...``    ``
++''+++';:;;;;;;::;;;'';:,..,.,;##++'#++:;';;;':`  ``.:;'++++.,,,...``    ``
++''++#';:;;;;';;::;'''';,,:;:.,,,;;'#+,,.:;;'.`````,;;+###++.,......``  ``.
+''+++#+;::;;;;';''''++;::';:,.````..:,,..;;,``````,:'+###+++........``  ``,
+''+++++';:;;''';;;''++'::;;:,,.````.,::;;,```````.,;+######'.......``` ``.,
++'+++''';;;;''';'++##+;:;;:::..```````..```````.,::'+######'.`....```````.,
++++++++';;;''+++''++'';';:,.`````````````.```.,::;''+######'.``...``````.,,
++++'+++';;''++++++#+';:;':...`.........``...,,;'''+##@#####;```..```````.,:
+</pre>
+  </div>
+</body>
+</html>
