update for next step

--- a/resume/index.html
+++ b/resume/index.html
@@ -21,13 +21,13 @@
           <tr>
             <td>联系方式</td>
             <td>
-              <span>邮件：<a href="mailto:lendage@gmail.com">lendage[AT]gmail.com</a></span>
+              <span>邮件：<a href="mailto:me@lenage.com">me[AT]lenage.com</a></span>
               <span>电话：(+86) 186-8487-9976</span>
             </td>
           </tr>
           <tr>
             <td>教育背景</td>
-            <td>天津工业大学（06级本科，工学学士，通信工程）</td>
+            <td>天津工业大学（2010级本科毕业，工学学士，通信工程）</td>
           </tr>
           <tr>
             <td>博客</td>
@@ -45,10 +45,10 @@
             <td>
               <ul class="skills">
                 <!--<li>全端工程师：前端，服务端，存储，测试，部署，监控，优化等</li> -->
-                <li>熟悉web，3 年 Rails 开发经验， 1.5 年 E-Commerce 网站开发经验</li>
-                <li>熟练前端开发，对 JS/HTML/CSS 有较好的理解，使用近 5 年</li>
+                <li>熟练web开发，3 年 Rails 开发经验， 1.5 年 E-Commerce 网站开发经验</li>
+                <li>熟练前端开发(JS/CSS)，有AngularJS, React经验</li>
                 <li>熟悉 Linux 服务器配置</li>
-                <li>熟悉 AWS 产品的使用</li>
+                <li>熟悉 AWS 产品配置和使用</li>
                 <li>Ruby/Javascript/Clojure/Python</li>
                 <li><a href="https://github.com/lenage/dotfiles">Linuxer</a>, <a href="https://github.com/lenage/emacs-config">Emacser</a> </li>
               </ul>
@@ -132,6 +132,12 @@
             </p>
           </li>
           <li>
+            <h3>参与第三教育工作室项目，未来教育家工作坊成员 <a href="http://www.simple-education.org/about">http://www.simple-education.org/about</a>
+              <span class="date">2009/11 - 至今</span></h3>
+            <p>第三教育工作室是一个长期处于草根状态的教育工作室，主要从事开放教育和青年发展的研究与倡导，思考和探讨了当前教育面临的主要问题和解决方式。</p>
+            <p><a href="http://simple-education.org/w/%E9%A6%96%E9%A1%B5">未来教育家工作坊</a>是第三教育工作室的"知识库"和"练兵场", 探讨信息社会办学、办教育的问题，并开展相关的实验。</p>
+          </li>
+          <li>
             <h3>自主创业-幼儿教育产品项目
               <span class="title">开发工程师</span>
               <span class="date">2009/9 - 2011/4</span></h3>
@@ -145,13 +151,26 @@
           <li>
             <h3>jing-fm API Wrapper  <a href="https://clojars.org/jing-fm">https://clojars.org/jing-fm</a> </h3>
             <div class="detail">
-              <p> 非官方的 <a href="http://jing.fm/">jing.fm</a> Clojure API Wrapper, 由于版权等因素，目前仅自己使用。 </p>
+              <p> 非官方的 <a href="http://jing.fm/">jing.fm</a> Clojure API Wrapper, 由于版权等因素，目前仅自己使用，使用Clojure编写, 代码简洁高效。 </p>
+            </div>
+          </li>
+          <li>
+            <h3>真北价值观测试  <a href="http://zhenbeichina.com">http://zhenbeichina.com</a> </h3>
+            <div class="detail">
+              <p>首个个人价值观测试工具(平台), 后端使用Clojure, 前端使用React在ClojureScript下的框架<a href="https://github.com/reagent-project/reagent">Reagent</a>。
+              </p>
             </div>
           </li>
           <li>
             <h3>arduino-sketch <a href="https://github.com/lenage/arduino-sketch">https://github.com/lenage/arduino-sketch</a></h3>
             <div class="detail">
-              <p> 玩 Arduino 时的一些试验代码 </p>
+              <p> 玩 Arduino 时的一些实验代码 </p>
+            </div>
+          </li>
+          <li>
+            <h3>Github Stars <a href="https://github.com/stars/lenage">https://github.com/stars/lenage</a></h3>
+            <div class="detail">
+              <p> 我的 Github 收藏夹 </p>
             </div>
           </li>
         </ol>
@@ -167,7 +186,7 @@
               <b>大数据：</b> Spark, julia
             </li>
             <li>
-              <b>阅读：</b> 科幻小说，计算机类书籍
+              <b>阅读：</b> 科幻小说
             </li>
           </ul>
         </div>
