--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
       <div class="section">
         <h2>基本信息</h2>
         <div id="profile">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/about.lenage.me/resume.jpeg"/>
+          <img src="http://zhenbeichina.com/img/about_us/lenage.jpg"/>
         </div>
         <table id="info">
           <tr>
