Update footer and remove resume info

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="container">
-    <pre style="font: 4px/2px monospace;">`..```.,,```````...........',......:,...```..,...,,:::;;;;;;;;;;;;;;;::::::
+    <pre style="font: 1rem monospace; text-align: center; margin-top: 5rem;">`..```.,,```````...........',......:,...```..,...,,:::;;;;;;;;;;;;;;;::::::
 `.,.`..:;:,.````..........,',......:,...```..,.,,::;;;;;;;;;;;;;;;;::::,,,,
 ```..,,;';;,,,,.,........,,+,,.....;,...````.,,,,::::;;;;;;;;;;;:::,,,,,,,,
 ````,::'''':,,,,::,,.....,,+,,.....;,...````...,::::::;:;;;;::::,,,,,,,,,,.
