--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
       <div class="section">
         <h2>基本信息</h2>
         <div id="profile">
-          <img src="http://zhenbeichina.com/img/about_us/lenage.jpg"/>
+          <img src="/assets/images/lenage.jpg"/>
         </div>
         <table id="info">
           <tr>
@@ -27,18 +27,18 @@
           </tr>
           <tr>
             <td>教育背景</td>
-            <td>天津工业大学（2010级本科毕业，工学学士，通信工程）</td>
+            <td>天津工业大学（2010 级本科，通信工程）</td>
           </tr>
-          <tr>
-            <td>博客</td>
-            <td>
-              <a href="http://blog.lenage.com">http://blog.lenage.com</a>
-            </td>
-          </tr>
+          <!-- <tr> -->
+          <!--   <td>博客</td> -->
+          <!--   <td> -->
+          <!--     <a href="http://blog.lenage.com">http://blog.lenage.com</a> -->
+          <!--   </td> -->
+          <!-- </tr> -->
 
           <tr>
             <td>工作经验</td>
-            <td>4年</td>
+            <td>10 年</td>
           </tr>
           <tr>
             <td>职业技能</td>
@@ -64,10 +64,6 @@
             <td>英语</td>
             <td>熟练阅读文档；作为工作语言使用 3 年。</td>
           </tr>
-          <!-- <tr> -->
-          <!--   <td>求职目标</td> -->
-          <!--   <td>大公司：偏后台或偏底层的开发职位；小公司／Startup：无职位偏好</td> -->
-          <!-- </tr> -->
         </table>
       </div>
       <div class="section work">
@@ -175,43 +171,6 @@
           </li>
         </ol>
       </div>
-      <div class="section intern">
-        <h2>兴趣</h2>
-        <div class="detail">
-          <ul>
-            <li>
-              <b>函数式编程：</b> Clojure, Common Lisp
-            </li>
-            <li>
-              <b>大数据：</b> Spark, julia
-            </li>
-            <li>
-              <b>阅读：</b> 科幻小说
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="section others">
-        <h2>足迹</h2>
-        <div class="detail">
-          <ul>
-            <li>
-              <b>Twitter：</b> <a href="https://twitter.com/heyuan"> twitter.com/heyuan</a>
-            </li>
-            <li>
-              <b>豆瓣：</b> <a href="http://www.douban.com/people/lendage/"> douban.com/people/lendage/</a>
-            </li>
-            <li>
-              <b>Linkedin：</b> <a href="http://cn.linkedin.com/in/heyuan/"> cn.linkedin.com/in/heyuan</a>
-            </li>
-            <li>
-              <b>Flickr：</b> <a href="https://www.flickr.com/photos/lenage/"> flickr.com/photos/lenage</a>
-            </li>
-            <li>
-              <b>Prismatic：</b> <a href="http://www.getprismatic.com/profile/lenage"> getprismatic.com/profile/lenage</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </body>
