update index.html and style.css

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,13 +16,13 @@
         <table id="info">
           <tr>
             <td>姓名</td>
-            <td>何源</td>
+            <td id="name">何源</td>
           </tr>
           <tr>
             <td>联系方式</td>
             <td>
               <span>邮件：<a href="mailto:me@lenage.com">me[AT]lenage.com</a></span>
-              <span>电话：(+86) 186-8487-9976</span>
+              <span>电话：<a href="tel:18684879976">(+86) 186-****-***6</a></span>
             </td>
           </tr>
           <tr>
@@ -35,7 +35,6 @@
           <!--     <a href="http://blog.lenage.com">http://blog.lenage.com</a> -->
           <!--   </td> -->
           <!-- </tr> -->
-
           <tr>
             <td>工作经验</td>
             <td>10 年</td>
@@ -44,13 +43,14 @@
             <td>职业技能</td>
             <td>
               <ul class="skills">
-                <!--<li>全端工程师：前端，服务端，存储，测试，部署，监控，优化等</li> -->
-                <li>熟练web开发，3 年 Rails 开发经验， 1.5 年 E-Commerce 网站开发经验</li>
-                <li>熟练前端开发(JS/CSS)，有AngularJS, React经验</li>
-                <li>熟悉 Linux 服务器配置</li>
-                <li>熟悉 AWS 产品配置和使用</li>
-                <li>Ruby/Javascript/Clojure/Python</li>
-                <li><a href="https://github.com/lenage/dotfiles">Linuxer</a>, <a href="https://github.com/lenage/emacs-config">Emacser</a> </li>
+                <li>5 年技术团队管理经验，团队最大规模超 60 人</li>
+                <li>5 年 Backend 架构经验，熟悉常见的后端架构设计</li>
+                <li>5 年微服务实践经验，熟悉 Docker、kubernetes, Envoy</li>
+                <li>4 年 Golang 经验，两届 GopherChina 讲师</li>
+                <li>6 年 Ruby 经验， 3 年 E-Commerce 经验</li>
+                <li>3 年前端经验，熟悉 React</li>
+                <li>熟悉 AWS 相关云产品</li>
+                <li>熟悉 bazel</li>
               </ul>
             </td>
           </tr>
@@ -62,7 +62,7 @@
           </tr>
           <tr>
             <td>英语</td>
-            <td>熟练阅读文档；作为工作语言使用 3 年。</td>
+            <td>熟练阅读文档； 作为工作语言使用 4+ 年。</td>
           </tr>
         </table>
       </div>
@@ -71,35 +71,17 @@
         <ol>
           <li>
             <h3> ThePlant <a href="http://theplant.jp">http://theplant.jp</a>
-              <span class="title">Rails 开发工程师</span>
-              <span class="date">2011/06 - 至今</span></h3>
+              <span class="title">高级工程师</span>
+              <span class="date">2011/06 - 2014/12</span></h3>
             <p>
-              负责公司项目的前后端开发，至今，负责的项目有：
+              负责公司项目的前后端开发，项目如下：
               <ul class="projects">
                 <li>
-                  <h4>ASICS 欧洲 <a href="http://www.asics.de/"> http://www.asics.de </a></h4>
+                  <h4>LACOSTE(JP) <a href="http://shop.lacoste.jp/">http://shop.lacoste.jp </a>
+                    <span class="date">2013/01 - 2014/11</span>
+                  </h4>
                   <div class="detail">
-                    ASICS 是世界知名的运动品牌，ASICS 2.0 是我加入公司的第一个项目，主要负责前端工作和少量的后端开发工作。
-                    ASICS 2.0 是为 ASICS 欧洲量身定制的内容管理系统，支持 32 个国家 (域名) 和 35 种语言的产品和内容管理。
-                  </div>
-                </li>
-                <li>
-                  <h4>ASICS 欧洲 Redesign <a href="http://www.asics.de/"> http://www.asics.co.uk </a></h4>
-                  <div class="detail">
-                    ASICS 3.0 (Redesin)，作为主要开发人员 (共 2~3 人)，在之前 ASICS 2.0 的基础上完成大部分后端工作和前端部分工作，并与客户、设计公司良好沟通，
-                    在 5 周内上线主要的 10 国家，7 周内上线所有 32 个国家。
-                  </div>
-                </li>
-                <li>
-                  <h4>ThePlant 首页<a href="http://theplant.jp"> http://theplant.jp</a></h4>
-                  <div class="detail">
-                    单人完成公司网站后端开发 (Rails) 工作和部分前端工作，更方便的管理公司新闻和博客，页面采用响应式设计，更好的支持手持设备和平板。
-                  </div>
-                </li>
-                <li>
-                  <h4>LACOSTE(JP) <a href="http://shop.lacoste.jp/">http://shop.lacoste.jp </a></h4>
-                  <div class="detail">
-                    LACOSTE 是法国的一个是时装品牌，ThePlant 为 LACOSTE(JP) 日本分公司提供 E-commerce 网站开发服务, 作为主要开发人员，我参与开发了:
+                    LACOSTE 是法国的一个是时装品牌，ThePlant 为 LACOSTE(JP) 日本分公司提供 E-commerce 网站开发服务, 作为主要开发人员，我负责:
                     <ol>
                       <li>
                         <b>LACOSTE in-store APP</b>： 当客户去实体店购买但店铺无货时，提供给客户网上下单，实体店付款的便利，打通线上和实体店，作为主要开发人员 (共2~3人)，完成了大部分的后端工作。
@@ -124,49 +106,50 @@
                     </ol>
                   </div>
                 </li>
+                <li>
+                  <h4>ThePlant 首页<a href="http://theplant.jp"> http://theplant.jp</a>
+                    <span class="date">2012/05 - 2012/12</span>
+                  </h4>
+                  <div class="detail">
+                    完成公司网站后端开发 (Rails) 工作和部分前端工作，更方便的管理公司新闻和博客，页面采用响应式设计，更好的支持手持设备和平板。
+                  </div>
+                </li>
+                <li>
+                  <h4>ASICS 欧洲 Redesign <a href="http://www.asics.de/"> http://www.asics.co.uk </a>
+                    <span class="date">2012/02 - 2012/08</span>
+                  </h4>
+                  <div class="detail">
+                    ASICS 3.0 (Redesin)，作为主要开发人员 (共 2~3 人)，在之前 ASICS 2.0 的基础上完成大部分后端工作和前端部分工作，并与客户、设计公司良好沟通，
+                    在 5 周内上线主要的 10 国家，7 周内上线所有 32 个国家。
+                  </div>
+                </li>
+                <li>
+                  <h4>ASICS 欧洲 <a href="http://www.asics.de/"> http://www.asics.de </a>
+                    <span class="date">2011/06 - 2011/12</span>
+                  </h4>
+                  <div class="detail">
+                    ASICS 是世界知名的运动品牌，ASICS 2.0 是我加入公司的第一个项目，主要负责前端工作和少量的后端开发工作。
+                    ASICS 2.0 是为 ASICS 欧洲量身定制的内容管理系统，支持 32 个国家 (域名) 和 35 种语言的产品和内容管理。
+                  </div>
+                </li>
               </ul>
             </p>
-          </li>
-          <li>
-            <h3>参与第三教育工作室项目，未来教育家工作坊成员 <a href="http://www.simple-education.org/about">http://www.simple-education.org/about</a>
-              <span class="date">2009/11 - 至今</span></h3>
-            <p>第三教育工作室是一个长期处于草根状态的教育工作室，主要从事开放教育和青年发展的研究与倡导，思考和探讨了当前教育面临的主要问题和解决方式。</p>
-            <p><a href="http://simple-education.org/w/%E9%A6%96%E9%A1%B5">未来教育家工作坊</a>是第三教育工作室的"知识库"和"练兵场", 探讨信息社会办学、办教育的问题，并开展相关的实验。</p>
-          </li>
-          <li>
-            <h3>自主创业-幼儿教育产品项目
-              <span class="title">开发工程师</span>
-              <span class="date">2009/9 - 2011/4</span></h3>
-            <p>与大学同学一道，开发幼儿识字产品，主要负责 产品宣传网站开发，幼儿主题内容网站开发维护以及SEO, Flash 动画合成，后因资金等多方面原因以失败告终。</p>
           </li>
       </div>
       <div class="section intern">
         <h2>代码</h2>
-        <p>参见Github <a href="https://github.com/lenage">https://github.com/lenage</a> </p>
+        <p>参<a href="https://github.com/lenage"> Github</a>, <span> 2014 年之后个人项目鲜有更新</span></p>
         <ol>
           <li>
             <h3>jing-fm API Wrapper  <a href="https://clojars.org/jing-fm">https://clojars.org/jing-fm</a> </h3>
             <div class="detail">
-              <p> 非官方的 <a href="http://jing.fm/">jing.fm</a> Clojure API Wrapper, 由于版权等因素，目前仅自己使用，使用Clojure编写, 代码简洁高效。 </p>
-            </div>
-          </li>
-          <li>
-            <h3>真北价值观测试  <a href="http://zhenbeichina.com">http://zhenbeichina.com</a> </h3>
-            <div class="detail">
-              <p>首个个人价值观测试工具(平台), 后端使用Clojure, 前端使用React在ClojureScript下的框架<a href="https://github.com/reagent-project/reagent">Reagent</a>。
-              </p>
-            </div>
-          </li>
-          <li>
-            <h3>arduino-sketch <a href="https://github.com/lenage/arduino-sketch">https://github.com/lenage/arduino-sketch</a></h3>
-            <div class="detail">
-              <p> 玩 Arduino 时的一些实验代码 </p>
+              <p> 非官方的 <a href="http://jing.fm/">jing.fm</a> Clojure API Wrapper, 由于版权等因素，目前仅自己使用，使用 Clojure 编写, 代码简洁高效。 </p>
             </div>
           </li>
           <li>
             <h3>Github Stars <a href="https://github.com/stars/lenage">https://github.com/stars/lenage</a></h3>
             <div class="detail">
-              <p> 我的 Github 收藏夹 </p>
+              <p> Github 收藏夹 </p>
             </div>
           </li>
         </ol>
