--- a/resume/index.html
+++ b/resume/index.html
@@ -3,31 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>何源个人简历</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>何源 个人简历</title>
+    <link rel="stylesheet"  href="style.css" type="text/css" />
   </head>
   <body>
     <div id="page-wrap">
+      <h1 id="name">何源</h1>
+      <!-- <div class="section career-title"> -->
+      <!--   <span>Software Engineer</span> -->
+      <!-- </div> -->
       <div class="section">
-        <h2>基本信息</h2>
+        <h2></h2>
         <div id="profile">
           <img src="/assets/images/lenage.jpg"/>
         </div>
         <table id="info">
           <tr>
-            <td>姓名</td>
-            <td id="name">何源</td>
-          </tr>
-          <tr>
             <td>联系方式</td>
             <td>
               <span>邮件：<a href="mailto:me@lenage.com">me[AT]lenage.com</a></span>
-              <span>电话：<a href="tel:18684879976">(+86) 186-****-***6</a></span>
+              <span>电话：<a href="tel:18684879976">(+86) 186-8487-****</a></span>
             </td>
-          </tr>
-          <tr>
-            <td>教育背景</td>
-            <td>天津工业大学（2010 级本科，通信工程）</td>
           </tr>
           <!-- <tr> -->
           <!--   <td>博客</td> -->
@@ -36,29 +32,29 @@
           <!--   </td> -->
           <!-- </tr> -->
           <tr>
-            <td>工作经验</td>
-            <td>10 年</td>
-          </tr>
-          <tr>
             <td>职业技能</td>
             <td>
               <ul class="skills">
                 <li>5 年技术团队管理经验，团队最大规模超 60 人</li>
                 <li>5 年 Backend 架构经验，熟悉常见的后端架构设计</li>
-                <li>5 年微服务实践经验，熟悉 Docker、kubernetes, Envoy</li>
+                <li>5 年微服务实践经验，熟悉 Docker、kubernetes、 Envoy</li>
                 <li>4 年 Golang 经验，两届 GopherChina 讲师</li>
                 <li>6 年 Ruby 经验， 3 年 E-Commerce 经验</li>
                 <li>3 年前端经验，熟悉 React</li>
-                <li>熟悉 AWS 相关云产品</li>
                 <li>熟悉 bazel</li>
+                <li>熟悉 AWS 云产品</li>
               </ul>
             </td>
           </tr>
           <tr>
             <td>Github</td>
             <td>
-              <a href="https://github.com/lenage">lenage</a>
+              <a href="https://github.com/lenage">@lenage</a>
             </td>
+          </tr>
+          <tr>
+            <td>教育背景</td>
+            <td>天津工业大学（2010 级本科，通信工程）</td>
           </tr>
           <tr>
             <td>英语</td>
@@ -77,7 +73,7 @@
               负责公司项目的前后端开发，项目如下：
               <ul class="projects">
                 <li>
-                  <h4>LACOSTE(JP) <a href="http://shop.lacoste.jp/">http://shop.lacoste.jp </a>
+                  <h4>LACOSTE <a href="http://shop.lacoste.jp/">http://shop.lacoste.jp </a>
                     <span class="date">2013/01 - 2014/11</span>
                   </h4>
                   <div class="detail">
